Bug 1772225 - Implement a CGLayer-backed version of cairo_quartz_surface, to improve print/PDF output quality for pdf.js documents. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D150128